Initial routine service and duration calculation + tests